--- a/Editor/Html/Base.css
+++ b/Editor/Html/Base.css
@@ -410,7 +410,7 @@ button:active {
 
 .menu-list {
   margin: 0;
-  padding: 0;
+  padding: 0px;
   inset: auto;
   border: none;
 
@@ -428,6 +428,10 @@ button:active {
   position-visibility: anchors-visible;
 }
 
+.menu-list:popover-open {
+  display: grid;
+}
+
 .menu-item {
   display: block;
   border: none;
@@ -435,11 +439,10 @@ button:active {
   background: none;
   box-sizing: border-box;
   width: 100%;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 2px;
-  padding-right: 6px;
+  padding: 2px;
+  padding-right: 5px;
   text-align: left;
+  overflow: hidden;
 }
 
 .menu-item:active {
@@ -481,26 +484,6 @@ custom-matrix4x4 {
   flex-wrap: wrap;
 }
 
-fudge-stepper>.content>span,
-fudge-digit {
-  font-family: monospace;
-  box-sizing: border-box;
-}
-
-fudge-number>input[type="text"] {
-  font-family: monospace;
-  text-align: left;
-}
-
-fudge-initializer>.content {
-  --icon-actions: "<undefined>";
-  --icon-width: fit-content;
-}
-
-fudge-initializer>.content>.menu-container>.menu-list {
-  left: anchor(left);
-}
-
 .fudge-element>label {
   flex: 1 1 50%;
   background-color: var(--color-background-property-label);
@@ -527,6 +510,27 @@ fudge-initializer>.content>.menu-container>.menu-list {
   padding: 2px;
 }
 
+fudge-stepper>.content>span,
+fudge-digit {
+  font-family: monospace;
+  box-sizing: border-box;
+}
+
+fudge-number>.content input[type="text"] {
+  font-family: monospace;
+  text-align: left;
+}
+
+fudge-initializer>.content>button,
+fudge-initializer>.content>.menu-container>.menu-toggle {
+  --icon-actions: "<undefined>";
+  --icon-width: fit-content;
+}
+
+fudge-initializer>.content>.menu-container>.menu-list {
+  left: anchor(left);
+}
+
 fudge-number input,
 fudge-textinput input,
 fudge-comboselect input,
@@ -534,6 +538,10 @@ fudge-select select {
   width: 100%;
   text-overflow: ellipsis;
   min-width: 12ch;
+}
+
+fudge-comboselect.menu-item {
+  padding: 2px;
 }
 
 fudge-initializer>.content,
